--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -44,16 +44,17 @@
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
                 [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentTitleInput.valid || ctaContentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
+              <mat-error [hidden]="ctaContentTitleInput.valid || ctaContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
                 [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentSubTitleInput.valid || ctaContentSubTitleInput.pristine">Subtitel is
-                verplicht
-              </mat-hint>
+              <mat-error [hidden]="ctaContentSubTitleInput.valid || ctaContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -82,15 +83,16 @@
               <mat-label>Knop label</mat-label>
               <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
                 [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
-              </mat-hint>
+              <mat-error [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
+              </mat-error>
             </mat-form-field>
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-xs-12 col-sm-6">
               <mat-label>Knop link</mat-label>
               <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
                 [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentBtnLinkInput.valid || ctaContentBtnLinkInput.pristine">Link is verplicht
-              </mat-hint>
+              <mat-error [hidden]="ctaContentBtnLinkInput.valid || ctaContentBtnLinkInput.pristine">
+                Link is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
