--- a/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
@@ -28,25 +28,27 @@
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="newsContentTitle" placeholder="Titel" name="newsContentTitle"
                 [(ngModel)]="newsContent.title" #newsContentTitleInput="ngModel" required>
-              <mat-hint [hidden]="newsContentTitleInput.valid || newsContentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
+              <mat-error [hidden]="newsContentTitleInput.valid || newsContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="newsContentSubTitle" placeholder="Subtitel" name="newsContentSubTitle"
                 [(ngModel)]="newsContent.subTitle" #newsContentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="newsContentSubTitleInput.valid || newsContentSubTitleInput.pristine">
+              <mat-error [hidden]="newsContentSubTitleInput.valid || newsContentSubTitleInput.pristine">
                 Subtitel is verplicht
-              </mat-hint>
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="newsContentText" placeholder="Text" name="newsContentText"
                 [(ngModel)]="newsContent.text" #newsContentTextInput="ngModel" required> </textarea>
-              <mat-hint [hidden]="newsContentTextInput.valid || newsContentTextInput.pristine">Text is verplicht
-              </mat-hint>
+              <mat-error [hidden]="newsContentTextInput.valid || newsContentTextInput.pristine">
+                Text is verplicht
+              </mat-error>
             </mat-form-field>
 
           </div>
