--- a/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
@@ -46,8 +46,9 @@
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="servicesContentTitle" placeholder="Titel" name="servicesContentTitle"
                 [(ngModel)]="services.title" #servicesContentTitleInput="ngModel" required>
-              <mat-hint [hidden]="servicesContentTitleInput.valid || servicesContentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
+              <mat-error [hidden]="servicesContentTitleInput.valid || servicesContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
@@ -55,9 +56,9 @@
               <input matInput type="text" id="servicesContentSubTitle" placeholder="Subtitel"
                 name="servicesContentSubTitle" [(ngModel)]="services.subTitle" #servicesContentSubTitleInput="ngModel"
                 required>
-              <mat-hint [hidden]="servicesContentSubTitleInput.valid || servicesContentSubTitleInput.pristine">Subtitel
-                is
-                verplicht</mat-hint>
+              <mat-error [hidden]="servicesContentSubTitleInput.valid || servicesContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
@@ -65,8 +66,9 @@
               <textarea rows="1" matInput type="text" id="servicesContentText" placeholder="Text"
                 name="servicesContentText" [(ngModel)]="services.text" #servicesContentTextInput="ngModel"
                 required> </textarea>
-              <mat-hint [hidden]="servicesContentTextInput.valid || servicesContentTextInput.pristine">Text is verplicht
-              </mat-hint>
+              <mat-error [hidden]="servicesContentTextInput.valid || servicesContentTextInput.pristine">
+                Text is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -76,16 +78,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard0Title" placeholder="Titel" name="servicesCard0Title"
                   [(ngModel)]="services.services[0].title" #servicesCard0TitleInput="ngModel" required>
-                <mat-hint [hidden]="servicesCard0TitleInput.valid || servicesCard0TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="servicesCard0TitleInput.valid || servicesCard0TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card0Icon" placeholder="Icon" name="card0Icon"
                   [(ngModel)]="services.services[0].icon" #card0IconInput="ngModel" required>
-                <mat-hint [hidden]="card0IconInput.valid || card0IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="card0IconInput.valid || card0IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
@@ -100,16 +104,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard1Title" placeholder="Titel" name="servicesCard1Title"
                   [(ngModel)]="services.services[1].title" #servicesCard1TitleInput="ngModel" required>
-                <mat-hint [hidden]="servicesCard1TitleInput.valid || servicesCard1TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="servicesCard1TitleInput.valid || servicesCard1TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card1Icon" placeholder="Icon" name="card1Icon"
                   [(ngModel)]="services.services[1].icon" #card1IconInput="ngModel" required>
-                <mat-hint [hidden]="card1IconInput.valid || card1IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="card1IconInput.valid || card1IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
@@ -124,16 +130,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard2Title" placeholder="Titel" name="servicesCard2Title"
                   [(ngModel)]="services.services[2].title" #servicesCard2TitleInput="ngModel" required>
-                <mat-hint [hidden]="servicesCard2TitleInput.valid || servicesCard2TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="servicesCard2TitleInput.valid || servicesCard2TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card2Icon" placeholder="Icon" name="card2Icon"
                   [(ngModel)]="services.services[2].icon" #card2IconInput="ngModel" required>
-                <mat-hint [hidden]="card2IconInput.valid || card2IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="card2IconInput.valid || card2IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
