--- a/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
@@ -48,8 +48,9 @@
               <input matInput type="text" id="contactCardContentTitle" placeholder="Titel"
                 name="contactCardContentTitle" [(ngModel)]="services.title" #contactCardContentTitleInput="ngModel"
                 required>
-              <mat-hint [hidden]="contactCardContentTitleInput.valid || contactCardContentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
+              <mat-error [hidden]="contactCardContentTitleInput.valid || contactCardContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
@@ -57,9 +58,9 @@
               <input matInput type="text" id="contactCardContentSubTitle" placeholder="Subtitel"
                 name="contactCardContentSubTitle" [(ngModel)]="services.subTitle"
                 #contactCardContentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="contactCardContentSubTitleInput.valid || contactCardContentSubTitleInput.pristine">
-                Subtitel is
-                verplicht</mat-hint>
+              <mat-error [hidden]="contactCardContentSubTitleInput.valid || contactCardContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
@@ -67,9 +68,9 @@
               <textarea rows="1" matInput type="text" id="contactCardContentText" placeholder="Text"
                 name="contactCardContentText" [(ngModel)]="services.text" #contactCardContentTextInput="ngModel"
                 required> </textarea>
-              <mat-hint [hidden]="contactCardContentTextInput.valid || contactCardContentTextInput.pristine">Text is
-                verplicht
-              </mat-hint>
+              <mat-error [hidden]="contactCardContentTextInput.valid || contactCardContentTextInput.pristine">
+                Text is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -79,16 +80,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard0Title" placeholder="Titel" name="contactCard0Title"
                   [(ngModel)]="services.services[0].title" #contactCard0TitleInput="ngModel" required>
-                <mat-hint [hidden]="contactCard0TitleInput.valid || contactCard0TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="contactCard0TitleInput.valid || contactCard0TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard0Icon" placeholder="Icon" name="contactCard0Icon"
                   [(ngModel)]="services.services[0].icon" #contactCard0IconInput="ngModel" required>
-                <mat-hint [hidden]="contactCard0IconInput.valid || contactCard0IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="contactCard0IconInput.valid || contactCard0IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
@@ -103,16 +106,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard1Title" placeholder="Titel" name="contactCard1Title"
                   [(ngModel)]="services.services[1].title" #contactCard1TitleInput="ngModel" required>
-                <mat-hint [hidden]="contactCard1TitleInput.valid || contactCard1TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="contactCard1TitleInput.valid || contactCard1TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard1Icon" placeholder="Icon" name="contactCard1Icon"
                   [(ngModel)]="services.services[1].icon" #contactCard1IconInput="ngModel" required>
-                <mat-hint [hidden]="contactCard1IconInput.valid || contactCard1IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="contactCard1IconInput.valid || contactCard1IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
@@ -127,16 +132,18 @@
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard2Title" placeholder="Titel" name="contactCard2Title"
                   [(ngModel)]="services.services[2].title" #contactCard2TitleInput="ngModel" required>
-                <mat-hint [hidden]="contactCard2TitleInput.valid || contactCard2TitleInput.pristine">Titel is
-                  verplicht</mat-hint>
+                <mat-error [hidden]="contactCard2TitleInput.valid || contactCard2TitleInput.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard2Icon" placeholder="Icon" name="contactCard2Icon"
                   [(ngModel)]="services.services[2].icon" #contactCard2IconInput="ngModel" required>
-                <mat-hint [hidden]="contactCard2IconInput.valid || contactCard2IconInput.pristine">Icon is verplicht
-                </mat-hint>
+                <mat-error [hidden]="contactCard2IconInput.valid || contactCard2IconInput.pristine">
+                  Icon is verplicht
+                </mat-error>
               </mat-form-field>
 
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
