--- a/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
@@ -18,40 +18,47 @@
         <form (ngSubmit)="onSubmit()" #footerForm="ngForm">
           <div class="form-group row">
             <div class="col-sm-12 col-md-6">
-              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Over titel</mat-label>
                 <input matInput type="text" id="aboutTitle" placeholder="Titel" name="aboutTitle"
                   [(ngModel)]="footerContent.aboutTitle" #aboutTitle="ngModel" required />
-                <mat-hint [hidden]="aboutTitle.valid || aboutTitle.pristine">Titel is verplicht</mat-hint>
+                <mat-error [hidden]="aboutTitle.valid || aboutTitle.pristine">
+                  Titel is verplicht
+                </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Over tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.aboutText" name="aboutText" id="aboutText"
                   type="text" #aboutText="ngModel" required>
                 </textarea>
-                <mat-hint [hidden]="aboutText.valid || aboutText.pristine">Over tekst is verplicht</mat-hint>
+                <mat-error [hidden]="aboutText.valid || aboutText.pristine">
+                  Over tekst is verplicht
+                </mat-error>
               </mat-form-field>
             </div>
             <div class="col-sm-12 col-md-6">
-              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Social media titel</mat-label>
                 <input matInput type="text" id="socialTitle" placeholder="Titel" name="socialTitle"
                   [(ngModel)]="footerContent.socialTitle" #socialTitle="ngModel" required />
-                <mat-hint [hidden]="socialTitle.valid || socialTitle.pristine">Social media titel is verplicht
-                </mat-hint>
+                <mat-error [hidden]="socialTitle.valid || socialTitle.pristine">
+                  Social media titel is verplicht
+                </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
                 <mat-label>Social media tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.socialText" name="socialText" id="socialText"
                   type="text" #socialText="ngModel" required>
                 </textarea>
-                <mat-hint [hidden]="socialText.valid || socialText.pristine">Social media tekst is verplicht</mat-hint>
+                <mat-error [hidden]="socialText.valid || socialText.pristine">
+                  Social media tekst is verplicht
+                </mat-error>
               </mat-form-field>
             </div>
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Facebook link</mat-label>
               <input matInput type="text" id="facebookLink" placeholder="Tekst" name="facebookLink"
                 [(ngModel)]="footerContent.facebookLink" />
@@ -60,7 +67,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Instagram link</mat-label>
               <input matInput type="text" id="instaLink" placeholder="Tekst" name="instaLink"
                 [(ngModel)]="footerContent.instagramLink" />
@@ -69,7 +76,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Twitter link</mat-label>
               <input matInput type="text" id="twitterLink" placeholder="Tekst" name="twitterLink"
                 [(ngModel)]="footerContent.twitterLink" />
@@ -78,11 +85,13 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Footer tekst</mat-label>
               <input matInput type="text" id="footerText" placeholder="Tekst" name="footerText"
                 [(ngModel)]="footerContent.footerText" #footerText="ngModel" required />
-              <mat-hint [hidden]="footerText.valid || footerText.pristine">Footer text is verplicht</mat-hint>
+              <mat-error [hidden]="footerText.valid || footerText.pristine">
+                Footer text is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
