--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -29,13 +29,17 @@
               <mat-label>Standaard titel</mat-label>
               <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
                 [(ngModel)]="headerContent.defaultTitle" #defaultTitle="ngModel" required>
-              <mat-hint [hidden]="defaultTitle.valid || defaultTitle.pristine">Titel is verplicht</mat-hint>
+              <mat-error [hidden]="defaultTitle.valid || defaultTitle.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
             <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
               <mat-label>Standaard subtitel</mat-label>
               <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
                 [(ngModel)]="headerContent.defaultSubtitle" #defaultSubTitle="ngModel" required>
-              <mat-hint [hidden]="defaultSubTitle.valid || defaultSubTitle.pristine">Subtitel is verplicht</mat-hint>
+              <mat-error [hidden]="defaultSubTitle.valid || defaultSubTitle.pristine">
+                Subtitel is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -44,7 +48,9 @@
               <mat-label>Standaard afbeelding</mat-label>
               <input matInput type="text" id="defaultImage" placeholder="Afbeelding" name="defaultImage"
                 [(ngModel)]="headerContent.defaultImage" #defaultImage="ngModel" required>
-              <mat-hint [hidden]="defaultImage.valid || defaultImage.pristine">Afbeelding is verplicht</mat-hint>
+              <mat-error [hidden]="defaultImage.valid || defaultImage.pristine">
+                Afbeelding is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
