--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -23,7 +23,9 @@
               <mat-label>Titel</mat-label>
               <input matInput type="text" id="title" placeholder="Titel" name="title" [(ngModel)]="navContent.brandName"
                 #navTitle="ngModel" required>
-              <mat-hint [hidden]="navTitle.valid || navTitle.pristine">Titel is verplicht</mat-hint>
+              <mat-error [hidden]="navTitle.valid || navTitle.pristine">
+                Titel is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
@@ -32,7 +34,9 @@
               <mat-label>Logo</mat-label>
               <input matInput type="text" id="logo" placeholder="Logo" name="logo" [(ngModel)]="navContent.brandImage"
                 #navLogo="ngModel" required>
-              <mat-hint [hidden]="navLogo.valid || navLogo.pristine">Logo is verplicht</mat-hint>
+              <mat-error [hidden]="navLogo.valid || navLogo.pristine">
+                Logo is verplicht
+              </mat-error>
             </mat-form-field>
           </div>
 
